# flattenCellML

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.217307b.2.5pre1  Doxyfile.in  FindCellML.cmake  README.md
src/: ModelCompactor.cpp  ModelCompactor.hpp  VersionConverter.cpp  VersionConverter.hpp  cellmlutils.cpp  cellmlutils.hpp  compactorreport.cpp  compactorreport.hpp  flattenCellmlModel.cpp  utils.cpp  utils.hpp  xmlutils.cpp  xmlutils.hpp
